# PyTGS

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  tgs_gui.py  vercel.json
.claude/: settings.json
.codex/: config.toml
data/WCal_2025-04-28/: Tungsten_Calibration-2025-04-28-04.00um-baseline-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-baseline-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot01-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot01-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot02-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot02-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot03-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot03-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot04-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot04-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot05-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot05-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot06-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot06-POS-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot07-NEG-1.txt  Tungsten_Calibration-2025-04-28-04.00um-spot07-POS-1.txt  grating_guide.txt
pytgs/: analyzer.py  cli.py  lorentzian.py  paths.py
pytgs/tests/: test.py  test_utils.py
src/analysis/: fft.py  functions.py  lorentzian.py  signal_process.py  tgs.py
src/core/: fit.py  path.py  plots.py  utils.py
tests/: test.py  test_utils.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  (+1 more)
(+29 files in other folders)
